@@ -30,4 +30,5 @@
   - Now pgm3 shows other logfiles (like from wired devices) too. Changes in index.php, config.php, gnuplot.php, new userdefs.php)
 - Martin 2007-10-14
  -  User defined logs with several values in one file now supported. Changes in index.php, gnuplot.php, userdefs.php and config.php.
-
+- Martin 2007-10-16
+ - User defined graphics now for Piri an FS20 too
